# mp

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: Release.yml
mpcli/: Cargo.toml  README.md
mpcli/src/: cli.rs  configuration.rs  main.rs
mpcli/src/cli/: configure_subcommand.rs  post_and_draft_subcommands.rs
mpcli/src/configuration/: app_config.rs  default_behavior.rs
mplib/: Cargo.toml  README.md
mplib/src/: lib.rs  microblog_service.rs  micropub_service.rs  post.rs  post_result.rs  post_status.rs  publish.rs
src/: cli.rs  configuration.rs  configure.rs  get_content.rs  lib.rs  main.rs  publish.rs  publish_draft.rs
src/cli/: configure_subcommand.rs  post_and_draft_subcommands.rs  sub_commands.rs
src/configuration/: app_config.rs
src/configure/: app_config.rs  microblog_service.rs  user_input.rs
src/publish/: post.rs  post_result.rs  post_status.rs
src/publish_draft/: post_status.rs
tests/: integration_test.rs
