[package]
name = "mp"
version = "0.1.0"
edition = "2024"
description = "A command-line tool to publish text-only blog posts to Micropub endpoints."
authors = ["Michael Descy <mike@mjdescy.me>"]
license = "MIT"


[dependencies]
clap = { version = "4.5.43", features = ["cargo"] }
reqwest = "0.12.23"
rustyline = "17.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
toml = "0.8"
